--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ add_definitions(
 
 set(CMAKE_CXX_FLAGS "-g -Wall -lusb-1.0")
 
-find_package(PkgConfig)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK4 REQUIRED gtk4)
 
 add_executable(
   controller
@@ -25,4 +26,19 @@ add_executable(
   functions.h
 )
 
+add_executable(
+  controller-ui
+  controller-ui.c
+
+  vars.h
+  functions.h
+  ui/keyboard.h
+  ui/keyboard.c
+  ui/key.h
+  ui/key.c
+)
+
+
 target_link_libraries(controller usb-1.0)
+target_link_libraries(controller-ui PRIVATE ${GTK4_LIBRARIES})
+target_include_directories(controller-ui PRIVATE ${GTK4_INCLUDE_DIRS})
