chore(init-ui): UI keyboard sets working as expected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,23 +22,23 @@ add_executable(
   controller
   controller.c
 
-  vars.h
-  functions.h
+  lib/utils/vars.h
+  lib/utils/functions.h
 )
 
 add_executable(
   controller-ui
   controller-ui.c
 
-  vars.h
-  functions.h
-  ui/keyboard.h
-  ui/keyboard.c
-  ui/key.h
-  ui/key.c
+  lib/utils/vars.h
+  lib/utils/functions.h
+  lib/keyboard.h
+  lib/keyboard.c
+  lib/key.h
+  lib/key.c
 )
 
 
 target_link_libraries(controller usb-1.0)
-target_link_libraries(controller-ui PRIVATE ${GTK4_LIBRARIES})
+target_link_libraries(controller-ui PRIVATE usb-1.0 ${GTK4_LIBRARIES})
 target_include_directories(controller-ui PRIVATE ${GTK4_INCLUDE_DIRS})
